--- a/service-ribbon/build.gradle
+++ b/service-ribbon/build.gradle
@@ -30,7 +30,7 @@ ext {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
-	compile('org.springframework.cloud:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
