--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 
 group = 'com.ycw.spring_cloud_learn'
 version = '0.0.1-SNAPSHOT'
