--- a/config-client/build.gradle
+++ b/config-client/build.gradle
@@ -1,15 +1,7 @@
-
-ext {
-	springCloudVersion = 'Dalston.SR4'
-}
+description = "config-client"
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 }
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
-}
