--- a/service-ribbon/build.gradle
+++ b/service-ribbon/build.gradle
@@ -1,8 +1,11 @@
 description = "service-ribbon"
 
 dependencies {
+
+	compile project(":base")
 	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
+	compile('org.springframework.cloud:spring-cloud-starter-hystrix')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
