1，添加sleuth相关逻辑
Signed-off-by: yangchengwei <yangchengwei@91zdan.com>

--- a/service-feign/src/main/resources/application.yml
+++ b/service-feign/src/main/resources/application.yml
@@ -13,3 +13,11 @@ eureka:
       testkey2: testValue2
       testkey3: testValue3
       testkey4: testValue4
+
+logging:
+  level:
+    org:
+      springframwork:
+        web:
+          servlet:
+            DispatherServlet: DEBUG
