--- a/service-feign/build.gradle
+++ b/service-feign/build.gradle
@@ -3,6 +3,7 @@ description = "service-feign"
 dependencies {
 	compile project(":base")
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
+	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
