--- a/service-hi/build.gradle
+++ b/service-hi/build.gradle
@@ -2,6 +2,9 @@ description = "service-hi"
 
 dependencies {
 	compile project(":base")
+	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.9'
+	compile('org.springframework.cloud:spring-cloud-starter-feign')
+	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
