--- a/service-hi/src/main/resources/bootstrap.yml
+++ b/service-hi/src/main/resources/bootstrap.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: service-hi
+  sleuth:
+    sampler:
+      percentage: 1
 
 eureka:
   client:
@@ -22,4 +25,12 @@ eureka:
       testkey4: testValue4
     instanceId: service-hi
     appname: service-hi-appname ${server.port}
+
+logging:
+  level:
+    org:
+      springframwork:
+        web:
+          servlet:
+            DispatherServlet: DEBUG
 #    hostname: service-hi-hostname
