--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'spring_cloud_learn'
 
-include 'base', 'config-client','config-server', 'eurekaserver', 'service-feign','service-ribbon','service_zuul','service-hi'
+include 'base', 'config-client','config-server', 'eurekaserver',
+        'service-feign','service-ribbon','service_zuul','service-hi',"zipkin-server"
