1.加入zipkin相关代码
Signed-off-by: yangchengwei <yangchengwei@91zdan.com>

--- a/zipkin-server/build.gradle
+++ b/zipkin-server/build.gradle
@@ -3,6 +3,8 @@ description = "zipkin-server"
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-zuul')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
+	compile('io.zipkin.java:zipkin-server')
+	compile('io.zipkin.java:zipkin-autoconfigure-ui')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
