--- a/service-feign/build.gradle
+++ b/service-feign/build.gradle
@@ -5,5 +5,6 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
 	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
+	compile('org.springframework.cloud:spring-cloud-sleuth-zipkin')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
