--- a/service-hi/build.gradle
+++ b/service-hi/build.gradle
@@ -6,5 +6,6 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-feign')
 	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+	compile('org.springframework.cloud:spring-cloud-sleuth-zipkin')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
